# OmniChat-AI

./: Pipfile  README.md  main.py  package.json
backend/: Pipfile  prac.py  pyproject.toml
backend/src/img_descriptor/: blip_model.py
frontend/src/app/: page.tsx
frontend/src/components/prompt/: prompt.component.tsx
frontend/src/components/sidebar/: sidebar.component.tsx
